Fix SVG cutoffs + meta tags

--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,88 @@
 
 body {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     font-family: sans-serif;
     margin: 0 15px;
     padding: 0;
+
+    --background-colour: #F1F2F6;
+    --primary-colour: #000500;
+    --secondary-colour: #6665DD;
+
+    background: var(--background-colour);
+    color: var(--primary-colour);
 }
 
 #header {
     padding: 15px;
+    border-bottom: 1px solid grey;
 }
 
 #header > h1 {
 
+}
+
+input[type="file"] {
+  /*
+  * visuallyHidden class copied from HTML5 Boilerplate project:
+  * https://github.com/h5bp/html5-boilerplate/blob/9d6176a26ca4b70ab64a51d7abb9d3ebaa197855/dist/css/main.css#L135
+  *
+  * More: http://hugogiraudel.com/2016/10/13/css-hide-and-seek
+  */
+
+  /*
+  * Hide only visually, but have it available for screen readers:
+  * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+  *
+  * 1. For long content, line feeds are not interpreted as spaces and small width
+  *    causes content to wrap 1 word per line:
+  *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+  */
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* 1 */
+  clip-path: inset(50%);
+  border: 0;
+}
+
+/* When the visually hidden child input has focus, style the parent. */
+label:focus-within {
+    outline: 1px solid;
+}
+
+.button-wrapper {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
+    padding: 15px;
+}
+
+.custom-file-upload {
+    width: max-content;
+
+    font-family: sans-serif;
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+
+}
+
+.custom-download-button {
+    width: max-content;
+    font-family: sans-serif;
+    font-size: 16px;
+    background: none;
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
 }
