--- a/css/resizing.css
+++ b/css/resizing.css
@@ -5,20 +5,20 @@
     position: absolute;
     top: 100px;
     left: 100px;
-    background: rgba(100, 100, 100, 0.2);
+    background: rgba(0, 0, 0, 0.05);
 }
 
 .resizable .resizers {
     width: 100%;
     height: 100%;
-    border: 2px solid black;
+    border: 2px dotted black;
     box-sizing: border-box;
 }
 
 .resizable .resizers .resizer {
     width: 10px;
     height: 10px;
-    border-radius: 50%;
+    border-radius: 100%;
     background: white;
     border: 1px solid black;
     position: absolute;
@@ -46,4 +46,21 @@
     right: -5px;
     bottom: -5px;
     cursor: nwse-resize;
+}
+
+.overlay-grid {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+}
+
+.tile {
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
