--- a/css/svg.css
+++ b/css/svg.css
@@ -1,12 +1,15 @@
 #svg-wrapper {
+    display: grid;
     position: relative;
-    width: 100%;
+    margin: auto;
+    width: 80%;
+    max-width: 1000px;
     height: 500px;
     border: 1px solid black;
+
+    z-index: 2;
 }
 
 #svg-display {
-    overflow: hidden;
-    max-width: 1000px;
-    max-height: 500px;
+    background: repeating-conic-gradient(rgba(128, 128, 128, 0.1) 0% 25%, transparent 0% 50%) 50% / 20px 20px;
 }
